<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_candidates"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_candidates" />
        <item
            android:id="@+id/nav_positions"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_positions" />
        <item
            android:id="@+id/nav_voters"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_voters" />
        <item
            android:id="@+id/nav_results"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_results" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
