<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vote"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_vote" />
        <item
            android:id="@+id/nav_results"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_results" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_profile" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
